# cinnamon-menus

./: .gitignore  ChangeLog  HACKING  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  meson.build  meson_options.txt
.circleci/: config.yml
.github/workflows/: stale.yml
.pc/01_default_prefix.patch/libmenu/: gmenu-tree.c
.pc/02_kill_debian_menu.patch/libmenu/: desktop-entries.c
.pc/03_kde-legacydirs.patch/layout/: gnome-applications.menu
.pc/08_settings-menus.patch/layout/: gnome-applications.menu
.pc/09_app_install_entry.patch/layout/: gnome-applications.menu
.pc/09_games-menu.patch/layout/: gnome-applications.menu
.pc/11_science-menu.patch/layout/: gnome-applications.menu
.pc/70_ubuntu-directories.patch/po/: POTFILES.in
.pc/git_restore_calculator.patch/layout/: gnome-applications.menu
.pc/ubuntu_gcc_translations.patch/desktop-directories/: Makefile.am  Makefile.in
.pc/ubuntu_gcc_translations.patch/po/: POTFILES.in
debian/: changelog  control  control.in  copyright  files  gir1.2-gmenu-3.0.substvars  gnome-menus-blacklist  gnome-menus.install  gnome-menus.maintscript  gnome-menus.postrm.debhelper  gnome-menus.preinst.debhelper  gnome-menus.substvars  libcinnamon-menu-3-0.symbols  libcinnamon-menu-3-dev.install  libgnome-menu-3-0.substvars  menus.blacklist  rules  watch
debian/desktop-files/: ActionGames.directory  ActionGames.directory.in  AdventureGames.directory  AdventureGames.directory.in  ArcadeGames.directory  ArcadeGames.directory.in  BlocksGames.directory  BlocksGames.directory.in  BoardGames.directory  BoardGames.directory.in  CardGames.directory  CardGames.directory.in  Debian.directory  Debian.directory.in  GnomeScience.directory  GnomeScience.directory.in  KidsGames.directory  KidsGames.directory.in  LogicGames.directory  LogicGames.directory.in  RolePlayingGames.directory  RolePlayingGames.directory.in  Settings-System.directory  Settings.directory  SimulationGames.directory  SimulationGames.directory.in  SportsGames.directory  SportsGames.directory.in  StrategyGames.directory  StrategyGames.directory.in
debian/gir1.2-gmenu-3.0/DEBIAN/: control  md5sums
debian/gir1.2-gmenu-3.0/usr/lib/girepository-1.0/: GMenu-3.0.typelib
debian/gnome-menus/DEBIAN/: conffiles  control  md5sums  postinst  prerm
debian/gnome-menus/usr/share/desktop-directories/: X-GNOME-SystemSettings.directory
debian/gnome-menus/usr/share/locale/ar/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/as/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/bg/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/bn/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/bn_IN/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/crh/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/csb/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/de/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/en@shaw/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/et/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/fur/LC_MESSAGES/: gnome-menus-3.0.mo
debian/gnome-menus/usr/share/locale/hu/LC_MESSAGES/: gnome-menus-3.0.mo
debian/libgnome-menu-3-0-dbg/DEBIAN/: control  md5sums
debian/libgnome-menu-3-0-dbg/usr/share/doc/libgnome-menu-3-0-dbg/: README
debian/libgnome-menu-3-0/DEBIAN/: control  md5sums
debian/libgnome-menu-3-0/usr/lib/: libgnome-menu-3.so.0.0.1
debian/libgnome-menu-3-dev/DEBIAN/: control  md5sums
debian/libgnome-menu-3-dev/usr/lib/pkgconfig/: libgnome-menu-3.0.pc
debian/libgnome-menu-3-dev/usr/share/doc/libgnome-menu-3-dev/: copyright
debian/patches/: 02_kill_debian_menu.patch  08_settings-menus.patch  09_app_install_entry.patch  09_games-menu.patch  20_show-admin-tools-for-admin-group.patch  50_add-gcc-apps.patch  70_ubuntu-directories.patch  git_restore_calculator.patch  series  ubuntu_gcc_translations.patch
debian/po-up/: ar.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  debian.pot  dz.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  ku.po  lt.po  mk.po  ml.po  mr.po  nb.po  ne.po  nl.po  nn.po  pa.po  pl.po  pt.po  (+15 more)
debian/tmp/usr/include/gnome-menus-3.0/: gmenu-tree.h
debian/tmp/usr/lib/: libgnome-menu-3.so.0.0.1
debian/tmp/usr/share/desktop-directories/: Development.directory  Education.directory  Game.directory  Hardware.directory  System-Tools.directory  System.directory  Utility.directory  X-GNOME-Menu-Applications.directory  X-GNOME-Other.directory  X-GNOME-Sundry.directory  X-GNOME-Utilities.directory
desktop-directories/: Education.directory.in  Makefile.am  Makefile.in  Utility.directory.in  X-GNOME-Sundry.directory.in  X-GNOME-SystemSettings.directory.in  X-GNOME-Utilities.directory.in  X-GNOME-WebApplications.directory.in
docs/reference/: cmenu-docs.xml  meson.build
layout/: Makefile.am  Makefile.in  gnome-applications.menu
libmenu/: Makefile  Makefile.am  Makefile.in  cmenu-tree-item-private.h  cmenu-tree-item.c  cmenu-tree-item.h  cmenu-tree.c  cmenu-tree.h  desktop-entries.c  desktop-entries.h  entry-directories.c  entry-directories.h  gmenu-desktopappinfo.c  gmenu-desktopappinfo.h  gmenu-tree.c  gmenu-tree.h  libcinnamon-menu-3.0-uninstalled.pc.in  libcinnamon-menu-3.0.pc.in  libgnome-menu-3.0-uninstalled.pc.in  libgnome-menu-3.0.pc.in  menu-layout.c  menu-monitor.c  menu-util.c  menu-util.h  meson.build
po/: LINGUAS  POTFILES.in  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gn.po  gnome-menus-3.0.pot  (+70 more)
test/: main.c  meson.build
util/: Makefile.am  Makefile.in  cinnamon-menus-ls.js  test-menu-spec.c
(+62 files in other folders)
